--- a/style.css
+++ b/style.css
@@ -23,3 +23,474 @@ img {
 a {
   text-decoration: none;
 }
+.container-wrapper {
+  max-width: 1240px;
+  margin: auto;
+}
+li {
+  list-style: none;
+}
+
+/* header style */
+header {
+  padding: 25px 0;
+  background-color: #fffcf5;
+}
+.nav-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  text-align: center;
+}
+
+.nav-logo {
+  display: flex;
+  gap: 5px;
+}
+.nav-logo h2 {
+  font-size: 20px;
+  font-weight: 700;
+}
+nav ul {
+  display: flex;
+  gap: 42px;
+  font-size: 16px;
+  font-weight: 600;
+}
+.nav-reg {
+  display: flex;
+  justify-content: center;
+  gap: 15px;
+}
+.nav-reg button {
+  border: none;
+  background-color: #fffcf5;
+  font-size: 16px;
+  font-weight: 600;
+}
+.btn-active {
+  padding: 10px 15px;
+  border-radius: 6px;
+  border: 1.2px solid #e1e5e8;
+  box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
+}
+
+/* hero style start */
+#hero {
+  background-color: #fffcf5;
+  height: 750px;
+}
+
+.hero-container {
+  display: flex;
+  justify-content: space-between;
+  padding-top: 70px;
+}
+
+.hero-container > * {
+  flex-basis: 100%;
+}
+
+.hero-img {
+  position: relative;
+}
+
+.hero-img-1 {
+  width: 100%;
+  height: 550px;
+  text-align: right;
+  position: absolute;
+  z-index: 1;
+}
+
+.hero-img-2 {
+  width: 100%;
+  height: 450px;
+  margin-top: 86px;
+  position: absolute;
+  z-index: 2;
+}
+
+.hero-content-title {
+  width: 670px;
+  color: #21202a;
+  margin-top: 80px;
+  margin-bottom: 38px;
+  font-size: 55px;
+  font-weight: 600;
+  line-height: 80px;
+}
+
+.hero-content-pra {
+  width: 504px;
+  color: #545360;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 30px;
+}
+
+.hero-btn {
+  border: none;
+  padding: 12px 19px;
+  margin-top: 25px;
+  background-color: #3936c4;
+  border-radius: 12px;
+  color: #fff;
+  text-align: center;
+  font-size: 18px;
+  font-weight: 600;
+  line-height: 30px;
+}
+
+/* ass.. with style */
+#ass-with {
+  margin: 20px 0;
+}
+.ass-title h3 {
+  margin-bottom: 25px;
+  color: #21202a;
+  text-align: center;
+  font-family: Poppins;
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+.ass-with {
+  width: 75%;
+  margin: auto;
+  display: flex;
+  justify-content: space-around;
+  gap: 25px;
+  text-align: center;
+  align-items: center;
+}
+
+.ass-with-item {
+  width: 20%;
+}
+.works-title {
+  margin-top: 150px;
+  color: #21202a;
+  text-align: center;
+  font-size: 32px;
+  font-weight: 600;
+  line-height: 52px;
+}
+.works-title-pra {
+  width: 650px;
+  margin: auto;
+  text-align: center;
+  margin-top: 15px;
+}
+
+.work-card {
+  margin-top: 45px;
+  display: flex;
+  justify-content: space-between;
+  gap: 20px;
+}
+
+.Profile,
+.cv,
+.Interview {
+  box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px,
+    rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
+  border-radius: 10px;
+  padding: 20px;
+}
+.Profile-svg {
+  width: 88px;
+  height: 88px;
+  border-radius: 10px;
+  background: #009bff;
+  margin-bottom: 35px;
+}
+
+.cv-svg {
+  width: 88px;
+  height: 88px;
+  border-radius: 10px;
+  background: #ff8100;
+  margin-bottom: 35px;
+}
+
+.Interview-svg {
+  width: 88px;
+  height: 88px;
+  border-radius: 10px;
+  background: #8a5cd7;
+  margin-bottom: 35px;
+}
+.work-card-pra {
+  margin-top: 25px;
+  color: #545360;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 28px;
+}
+.card-btn {
+  border: none;
+  background-color: white;
+  margin-top: 15px;
+}
+
+.activ {
+  color: blue;
+}
+/* dream job section style */
+
+/* responsive breakpoints */
+/* ********************************************************************************************************* */
+@media (max-width: 991.98px) {
+  /* header style */
+  /* header {
+    padding: 22px 10px;
+  } */
+  /* .nav-logo {
+    gap: 4px;
+  } */
+  /* .nav-logo h2 {
+    font-size: 19px;
+    font-weight: 600;
+  } */
+  /* nav ul {
+    gap: 35px;
+    font-size: 15px;
+    font-weight: 500;
+  } */
+  /* .nav-reg {
+    gap: 12px;
+  } */
+  /* .nav-reg button {
+    font-size: 15px;
+    font-weight: 600;
+  } */
+  /* .btn-active {
+    padding: 9px 12px;
+  } */
+
+  /* hero style start */
+  /* #hero {
+    padding: 25px;
+  } */
+  /* 
+  .hero-container {
+    display: flex;
+    justify-content: space-between;
+    padding-top: 70px;
+  } */
+
+  /* .hero-container > * {
+    flex-basis: 100%;
+  } */
+
+  /* .hero-img {
+    position: relative;
+  } */
+
+  /* .hero-img-1 {
+    width: 100%;
+    height: 550px;
+    text-align: right;
+    position: absolute;
+    z-index: 1;
+  } */
+
+  /* .hero-img-2 {
+    width: 100%;
+    height: 450px;
+    margin-top: 125px;
+    position: absolute;
+    z-index: 2;
+  } */
+
+  /* .hero-content-title {
+    width: 450px;
+    margin-top: 80px;
+    margin-bottom: 35px;
+    font-size: 32px;
+    font-weight: 500;
+    line-height: 60px;
+  } */
+
+  /* .hero-content-pra {
+    width: 450px;
+    font-size: 15px;
+    font-weight: 400;
+    line-height: 25px;
+  } */
+
+  /* .hero-btn {
+    padding: 10px 15px;
+    margin-top: 15px;
+    border-radius: 10px;
+    font-size: 15px;
+    font-weight: 500;
+    line-height: 25px;
+  } */
+}
+
+/* ************************************************************************************************************* */
+@media (max-width: 767.98px) {
+  /* header style */
+  header {
+    padding: 25px 25px;
+  }
+  .nav-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    text-align: center;
+  }
+
+  .nav-logo {
+    display: flex;
+    gap: 5px;
+  }
+  .nav-logo h2 {
+    font-size: 20px;
+    font-weight: 700;
+  }
+  nav ul {
+    display: flex;
+    gap: 25px;
+    font-size: 16px;
+    font-weight: 500;
+  }
+  .nav-reg {
+    display: none;
+  }
+
+  /* hero style start */
+
+  .hero-container {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .hero-img {
+    position: relative;
+  }
+  .hero-content {
+    text-align: center;
+    margin: auto;
+    margin-bottom: 45px;
+  }
+  .hero-img-1 {
+    text-align: center;
+    position: absolute;
+    z-index: 1;
+  }
+
+  .hero-img-2 {
+    margin-top: 70px;
+    position: absolute;
+    z-index: 2;
+  }
+
+  .hero-content-title {
+    margin-top: 40px;
+    margin-bottom: 18px;
+    font-size: 30px;
+  }
+
+  .hero-content-pra {
+    font-size: 18px;
+  }
+
+  .hero-btn {
+    padding: 10px 15px;
+    margin-top: 15px;
+    border-radius: 10px;
+    text-align: center;
+    font-size: 16px;
+  }
+  .ass-with {
+    margin-top: 150px;
+  }
+  .work-card {
+    padding: 20px;
+    margin-top: 45px;
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+  }
+}
+/* ********************************************************************************************************* */
+@media (max-width: 575.98px) {
+  /* header style */
+  header {
+    padding: 20px 25px;
+  }
+  .nav-container {
+    display: block;
+    text-align: left;
+  }
+
+  .nav-logo {
+    display: flex;
+    gap: 5px;
+    margin-bottom: 15px;
+  }
+  .nav-logo h2 {
+    font-size: 16px;
+    font-weight: 500;
+  }
+  nav ul {
+    display: block;
+  }
+  .nav-reg {
+    display: none;
+  }
+
+  /* hero style start */
+
+  .hero-container {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .hero-img {
+    position: relative;
+  }
+  .hero-content {
+    text-align: center;
+    margin: auto;
+    margin-bottom: 35px;
+  }
+  .hero-img {
+    width: 100%;
+    margin: auto;
+    align-items: center;
+  }
+  .hero-img-1 {
+    text-align: center;
+    position: absolute;
+    z-index: 1;
+  }
+
+  .hero-img-2 {
+    margin-top: 130px;
+    position: absolute;
+    z-index: 2;
+  }
+
+  .hero-content-title {
+    margin-top: 10px;
+    margin-bottom: 18px;
+    font-size: 20px;
+  }
+
+  .hero-content-pra {
+    font-size: 18px;
+  }
+
+  .hero-btn {
+    padding: 10px 15px;
+    margin-top: 15px;
+    border-radius: 10px;
+    text-align: center;
+    font-size: 16px;
+  }
+}
