--- a/style.css
+++ b/style.css
@@ -339,6 +339,172 @@ nav ul {
   padding: 25px 15px;
   border-radius: 15px;
 }
+
+.show {
+  width: 150px;
+  height: auto;
+  margin: 45px auto;
+}
+
+.show-btn {
+  border: none;
+  background-color: #21202a;
+  color: white;
+  padding: 15px 25px;
+  border-radius: 15px;
+}
+
+.reviews-head {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 35px;
+}
+
+.reviews-head-title h2 {
+  width: 570px;
+  color: #21202a;
+  font-size: 42px;
+  font-weight: 600;
+  line-height: 52px;
+}
+.reviews-head-title p {
+  width: 470px;
+  color: #545360;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 28px;
+  margin-top: 20px;
+}
+.reviews-head-btn button {
+  border: none;
+  background-color: #3936c4;
+  border-radius: 5px;
+  padding: 15px 28px;
+  color: white;
+}
+
+.reviews-card {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.card1 {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+  padding: 25px 15px;
+  border-radius: 15px;
+}
+
+.card2,
+.card3 {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  padding: 25px 15px;
+  box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px,
+    rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
+  border-radius: 15px;
+}
+
+.card-img {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  margin-bottom: 35px;
+}
+
+.card-par {
+  width: 326px;
+  color: #545360;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 28px;
+  margin-bottom: 40px;
+}
+.card-par1 {
+  color: #21202a;
+  font-size: 18px;
+  font-weight: 600;
+  line-height: 30px;
+}
+.resume {
+  width: 100%;
+  height: 304px;
+  flex-shrink: 0;
+  background-color: #3936c4;
+  border-radius: 10px;
+  margin-top: 150px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-left: 45px;
+  padding-right: 45px;
+}
+.resume h2 {
+  width: 688px;
+  color: #fff;
+  font-size: 42px;
+  font-weight: 600;
+  line-height: 52px;
+}
+.resume input {
+  background-color: white;
+  color: #3936c4;
+  padding: 15px 35px;
+  font-weight: 600;
+  font-size: 18px;
+}
+
+footer {
+  width: 100%;
+  height: 492px;
+  margin-top: 100px;
+  background-image: url(./img/BG.png);
+  background-position: top;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.foot {
+  display: flex;
+  justify-content: space-between;
+  padding-top: 250px;
+  margin-bottom: 35px;
+}
+
+.foot h2 {
+  width: 571px;
+  color: #fff;
+  font-size: 42px;
+  font-weight: 600;
+  line-height: 52px;
+}
+
+.foot button {
+  width: 267px;
+  height: 72px;
+  background-color: #3936c4;
+  display: flex;
+  justify-content: start;
+  gap: 10px;
+  align-items: center;
+  padding-left: 25px;
+  color: white;
+}
+
+footer ul {
+  display: flex;
+  justify-content: end;
+}
+
+footer ul li a {
+  color: white;
+  margin-left: 25px;
+}
 /* responsive breakpoints */
 /* ********************************************************************************************************* */
 @media (max-width: 991.98px) {
@@ -523,6 +689,58 @@ nav ul {
     flex-direction: column;
     justify-content: space-between;
     gap: 50px;
+  }
+  /* .featured-card {
+    display: flex;
+    justify-content: space-between;
+    gap: 25px;
+    flex-wrap: wrap;
+  } */
+  .card-1 {
+    width: 90%;
+    height: auto;
+    margin: auto;
+    box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px,
+      rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
+    padding: 25px 15px;
+    border-radius: 15px;
+  }
+  .reviews-head {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 35px auto;
+  }
+
+  .reviews-head-title {
+    text-align: center;
+  }
+
+  .reviews-head-title p {
+    text-align: center;
+    margin: auto;
+    margin-bottom: 25px;
+  }
+  .reviews-card {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    align-items: center;
+  }
+
+  .resume {
+    width: 90%;
+    height: 204px;
+    margin-top: 100px;
+    display: flex;
+    flex-direction: column;
+  }
+  .resume h2 {
+    color: #fff;
+    font-size: 32px;
+    font-weight: 600;
+    line-height: 52px;
+    text-align: center;
   }
 }
 /* ********************************************************************************************************* */
